update url for Heart.csv

--- a/decisionTree.ipynb
+++ b/decisionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "1I3KfR5E-GHs"
    },
@@ -44,9 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decisionTree.ipynb  Heart.csv  iris.csv\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls"
    ]
@@ -293,21 +301,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u/home/h/hwang/workshop/ML_workshop\n",
+      "mv: cannot stat ‘Heart.csv’: No such file or directory\n",
+      "decisionTree.ipynb  Heart.csv.bk  iris.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "!wget https://github.com/haiyanwa/ML_workshop/blob/main/Heart.csv\n",
+    "!pwd\n",
+    "!mv Heart.csv Heart.csv.bk\n",
     "!ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ChestPain</th>\n",
+       "      <th>RestBP</th>\n",
+       "      <th>Chol</th>\n",
+       "      <th>Fbs</th>\n",
+       "      <th>RestECG</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>ExAng</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>Slope</th>\n",
+       "      <th>Ca</th>\n",
+       "      <th>Thal</th>\n",
+       "      <th>AHD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>typical</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>fixed</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>asymptomatic</td>\n",
+       "      <td>160</td>\n",
+       "      <td>286</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>asymptomatic</td>\n",
+       "      <td>120</td>\n",
+       "      <td>229</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>reversable</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nonanginal</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nontypical</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Age  Sex     ChestPain  RestBP  Chol  Fbs  RestECG  MaxHR  \\\n",
+       "0           1   63    1       typical     145   233    1        2    150   \n",
+       "1           2   67    1  asymptomatic     160   286    0        2    108   \n",
+       "2           3   67    1  asymptomatic     120   229    0        2    129   \n",
+       "3           4   37    1    nonanginal     130   250    0        0    187   \n",
+       "4           5   41    0    nontypical     130   204    0        2    172   \n",
+       "\n",
+       "   ExAng  Oldpeak  Slope   Ca        Thal  AHD  \n",
+       "0      0      2.3      3  0.0       fixed   No  \n",
+       "1      1      1.5      2  3.0      normal  Yes  \n",
+       "2      1      2.6      2  2.0  reversable  Yes  \n",
+       "3      0      3.5      3  0.0      normal   No  \n",
+       "4      0      1.4      1  0.0      normal   No  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_heart = pd.read_csv('/u/home/h/hwang/workshop/ML_workshop/Heart.csv')\n",
+    "#df_heart = pd.read_csv('/u/home/h/hwang/workshop/ML_workshop/Heart.csv')\n",
+    "df_heart = pd.read_csv('https://raw.githubusercontent.com/haiyanwa/ML_workshop/master/Heart.csv')\n",
     "df_heart.head()"
    ]
   },
@@ -322,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -330,7 +504,18 @@
     "id": "kQPcsjMqrBBg",
     "outputId": "eab429d9-981f-4807-fae8-2dc002a40e38"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(303, 15)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_heart.shape"
    ]
